--- a/templates/login.html
+++ b/templates/login.html
@@ -2,58 +2,47 @@
 <html>
 <head>
     <title>ClubCentral - Login</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: #007BFF;
-            color: white;
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .container {
-            text-align: center;
-            padding: 20px;
-            background: #6C757D;
-            border-radius: 10px;
-            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.19), 0px 6px 6px rgba(0, 0, 0, 0.23);
-        }
-        h1, p {
-            margin-bottom: 30px;
-        }
-        .btn {
-            display: inline-block;
-            padding: 15px 30px;
-            margin: 10px;
+        .btn-back {
+            margin-top: 15px;
             border: none;
-            border-radius: 5px;
             font-size: 18px;
             color: white;
             background-color: #007BFF;
             text-decoration: none;
             transition: background-color 0.3s ease;
         }
-        .btn:hover {
+        .btn-back:hover {
             background-color: #0056b3;
-        }
-        input[type="email"], input[type="password"] {
-            margin: 10px 0;
-            padding: 10px;
-            width: 200px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Login to ClubCentral!</h1>
-        <form method="POST" action="/login">
-            <input type="email" id="email" name="email" placeholder="Email" required><br>
-            <input type="password" id="password" name="password" placeholder="Password" required><br>
-            <input class="btn" type="submit" value="Login">
-        </form>
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-md-6 p-3">
+                <div class="card">
+                    <div class="card-header">
+                        <h1 class="text-center">Login to ClubCentral!</h1>
+                    </div>
+                    <div class="card-body">
+                        <form method="POST" action="/login">
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" id="email" name="email" class="form-control" placeholder="Email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Password</label>
+                                <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+                            </div>
+                            <input class="btn btn-primary btn-block" type="submit" value="Login">
+                        </form>
+                        <button class="btn btn-primary btn-block" type="button" onclick="window.location.href='{{ url_for('index') }}';">Back to Home</button>
+                     </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
