--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ClubCentral</title>
+    <title>GreenSpace</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
             <div class="col-md-6 p-3">
                 <div class="card">
                     <div class="card-header">
-                        <h1 class="text-center">Welcome to ClubCentral!</h1>
+                        <h1 class="text-center">Welcome to GreenSpace!</h1>
                     </div>
                     <div class="card-body">
                         <p class="text-center">Connect with school clubs and organizations, participate in events, share your thoughts, and enjoy the school community like never before.</p>
