--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ClubCentral - Login</title>
+    <title>GreenSpace - Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
         .btn-back {
@@ -24,7 +24,7 @@
             <div class="col-md-6 p-3">
                 <div class="card">
                     <div class="card-header">
-                        <h1 class="text-center">Login to ClubCentral!</h1>
+                        <h1 class="text-center">Login to GreenSpace!</h1>
                     </div>
                     <div class="card-body">
                         <form method="POST" action="/login">
