--- a/templates/my_community.html
+++ b/templates/my_community.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ClubCentral - My Community</title>
+    <title>GreenSpace - My Community</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
@@ -9,7 +9,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3 p-3">
-                <h1>ClubCentral</h1>
+                <h1>GreenSpace</h1>
                 <div class="list-group">
                     <a href="/home" class="list-group-item list-group-item-action">Home</a>
                     <a href="/community" class="list-group-item list-group-item-action active">My Community</a>
