--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ClubCentral - Notifications</title>
+    <title>GreenSpace - Notifications</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
         .notification-card {
@@ -23,7 +23,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3 p-3">
-                <h1>ClubCentral</h1>
+                <h1>GreenSpace</h1>
                 <div class="list-group">
                     <a href="/home" class="list-group-item list-group-item-action">Home</a>
                     <a href="/community" class="list-group-item list-group-item-action">My Community</a>
