--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ClubCentral - Sign Up</title>
+    <title>GreenSpace - Sign Up</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
             <div class="col-md-6 p-3">
                 <div class="card">
                     <div class="card-header">
-                        <h1 class="text-center">Join ClubCentral!</h1>
+                        <h1 class="text-center">Join GreenSpace!</h1>
                     </div>
 
                     <div class="card-body">
